<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/big_padding"
    tools:context=".NewExpenseActivity">

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/place_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/place_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_place"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/date_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_et"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/category_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_et"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/category_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_category"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_et"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/big_padding"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_et" />

</androidx.constraintlayout.widget.ConstraintLayout>